package carkot;

option java_package = "carkot";
option java_out_classname = "Route";

message Route {
   repeated WayPoint way_points = 1; 

    message WayPoint {
        double distance = 2;
        double angle_delta = 3; 
    }
}
